--- a/LocalLocation/app/build.gradle
+++ b/LocalLocation/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.1'
     defaultConfig {
         applicationId "org.astra_g.androidpit.locallocation"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -14,6 +14,8 @@ android {
         release {
             minifyEnabled false
         }
+    }
+    productFlavors {
     }
 }
 
