--- a/LocalLocation/app/build.gradle
+++ b/LocalLocation/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.1'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "org.astra_g.androidpit.locallocation"
         minSdkVersion 14
@@ -20,5 +20,5 @@ android {
 }
 
 dependencies {
-    compile 'com.karumi:dexter:4.2.0'
+    implementation 'com.karumi:dexter:4.2.0'
 }
