--- a/LocalLocation/app/build.gradle
+++ b/LocalLocation/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 'android-P'
+    buildToolsVersion '28.0.0 rc1'
     defaultConfig {
         applicationId "org.astra_g.androidpit.locallocation"
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 'P'
         versionCode 1
         versionName "1.0"
     }
