--- a/LocalLocation/app/build.gradle
+++ b/LocalLocation/app/build.gradle
@@ -9,10 +9,12 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        resConfigs("de")
     }
     buildTypes {
         release {
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     productFlavors {
@@ -20,5 +22,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.karumi:dexter:5.0.0'
 }
